:boom: Change param type
